@@ -1,0 +1,14 @@
+#ifndef conf_header_
+#define conf_header_
+
+#include "egxp/egxp.h"
+
+
+int eim_config_init (Egxp * eg);
+
+
+void eim_config_save ();
+
+void eim_config_shutdown ();
+
+#endif
